~~~~~~~~~~~~~~~~
------------------------------------------------------------------------------------------------------------------------
Git Master
------------------------------------------------------------------------------------------------------------------------

CONFIGS:
	- Removed Amavis, ClamAV and SpamAssassin configuration (Such service must be provided as plugin)

ENGINE:
	- Fixed: unable to remove htgroup
	- Fixed: TERM environment variable not set (IMSCP::Debug library)
	- Removed 'dnschange' status
	- Updated 'change' status to 'tochange' and 'delete' status to 'todelete'

GUI:
	- Added plugin archive upload feature (tar.gz, tar.bz2 and zip)
	- Updated plugin API (Several BC breaks expected)
	- Removed 'dnschange' status
	- Updated status: 'change' to 'tochange' and 'delete' to 'todelete'

SETUP:
	- Items with status other than 'ok' and similar are not longer rebuilded on update

TOOLS:
	- Fixed: Awstats - Forbidden access (Ubuntu Lucid)

Tickets:
	- Fixed #782: Bug - Notice: A non well formed numeric value encountered...
	- Fixed #786: Bug - Httpd Server impl. - apache_php_fpm. - No input file specified
	- Fixed #790: Defect - Postfix 2.10.x - Relay access - SASL authentication
	- Fixed #793: Bug - Autoinstaller/Setup - Admin user is getting new id in database
	- Fixed #808: Enhancement - Possibility to Upload i-MSCP Plugins via GUI
	- Fixed #819: Tasks - Clean up PHP Settings

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc2.3
------------------------------------------------------------------------------------------------------------------------

2013-06-08: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-rc2.3

ENGINE:
	- Fixed: Error on backup: Unable to change mode for...

GUI:
	- Fixed: Unable to add hosting plan (reseller level)
	- Fixed: Possible missing properties (hosting_plans)

SETUP:
	- Fixed: Pressed feature is broken

Tickets: